Fix social buttons on mobile landing page

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -286,7 +286,6 @@ body {
                     margin-top: 10%;
                     @media (max-device-width: 40rem) {
                         margin-top: 10%;
-                        max-height: 20rem;
                     }
                     max-width: $maxwidthwide;
                     border-radius: 1rem;
